2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Correct the x86-64 name as x86_64.

2011-03-11  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/boot/i386/pc/lnxboot.S (real_code_2): Ensure that the
	initial chunk read from the kernel always includes GRUB's multiboot
	header, which is now outside the first sector.

2011-03-09  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/loader/i386/linux.c (find_efi_mmap_size): Page-align
	cached mmap_size, so that this works correctly when called multiple
	times.
	Reported by: Daniel Kahn Gillmor.  Should fix Debian bug #616638.

2011-03-09  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Simple configuration): Tidy up formatting.

2011-03-07  Szymon Janc <szymon@janc.net.pl>

	* grub-core/fs/zfs/zfs.c (zap_leaf_lookup):
	Set-but-not-used variable removed.

2011-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Workaround yet another IEEE1275 bug.

	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_flag): New enum value
	GRUB_IEEE1275_FLAG_BROKEN_ADDRESS_CELLS.
	* grub-core/kern/ieee1275/mmap.c (grub_machine_mmap_iterate): Ignore
	adress_cells and size:cells if GRUB_IEEE1275_FLAG_BROKEN_ADDRESS_CELLS
	is set.
	* grub-core/kern/ieee1275/cmain.c (grub_ieee1275_find_options): Set
	GRUB_IEEE1275_FLAG_BROKEN_ADDRESS_CELLS on powermacs.

2011-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/msdos.c (pc_partition_map_embed): Fix off by one
	error.

2011-02-11  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/20_linux_xen.in: Bail out early if linux_list is
	empty, since in that case we can only generate either nothing or a
	syntactically invalid configuration file.
	Reported by: Michal Suchanek.  Fixes Debian bug #612898.

2011-02-09  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Kernel): Add reference to grub-mkrescue.
	(Making a GRUB bootable CD-ROM): Likewise.
	(Invoking grub-mkrescue): New section.
	Reported by: Yann Dirson.  Fixes Debian bug #612585.
