@@ -1,5 +1,13 @@
 2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/video/bochs.c (grub_video_bochs_setup): Use
+	grub_video_mode_type_t.
+	* grub-core/video/cirrus.c (grub_video_cirrus_setup): Likewise.
+	* grub-core/video/i386/pc/vbe.c (grub_video_vbe_setup): Likewise.
+	* grub-core/video/i386/pc/vga.c (grub_video_vga_setup): Likewise.
+
+2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/grub-install.in: Correct the x86-64 name as x86_64.
 
 2011-03-11  Colin Watson  <cjwatson@ubuntu.com>
